# coding-agent

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_STORY.md  ENHANCED_PLANNER_INTEGRATION.md  LICENSE  README.md  SEARCH_TYPE_VALIDATION_FIX.md  SETUP.md  UPDATED_ARCHITECTURE_SUMMARY.md  agent.py  coding-agent  config.sample.json  context.py  database.py  example_config.json  example_interpreter_usage.py  goals.txt  index.py  intelligent_context.py  pyproject.toml  requirements.txt  test_complete_system.py  test_json_parsing.py  test_nuclear_approach.py  test_qwen_json_extraction.py  test_search_type_fix.py  test_source_priority.py  test_unified_format.py  test_user_case_fix.py  todo.txt  tools.json  tools.py  vectorize.py  verify_fix.py
docs/: DEBUG_MODE.md
src/: main.py
src/coding_agent/: agent.py  cache_service.py  cli.py  config.py  executor.py  main.py  orchestrator.py  prompt_enhancer.py  prompt_manager.py  types.py  web_interface.py
src/coding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/coding_agent/database/: __init__.py  rag_db.py
src/coding_agent/indexer/: __init__.py  file_indexer.py
src/coding_agent/providers/: __init__.py  base.py  ollama.py
src/coding_agent/tools/: __init__.py  analysis_tools.py  architecture_tools.py  base.py  code_generation_tools.py  directory_tools.py  file_move_tool.py  file_tools.py  intelligent_code_review_tool.py  intelligent_debugging_tool.py  knowledge_transfer_tool.py  project_scaffolding_tool.py  registry.py  security_tools.py  semantic_search_tool.py  smart_refactoring_tool.py  (+4 more)
src/core/: __init__.py  config.py  context.py  debug.py  interpreter.py  model_router.py  orchestrator.py  planner.py
test/: test___init__.py  test_agent.py  test_cache_service.py  test_config.py  test_executor.py  test_generator_tool.py  test_main.py  test_orchestrator.py  test_prompt_manager.py  test_types.py  test_ui.py
tests/: __init__.py  conftest.py  test_complete_fix.py  test_execution_steps.py  test_learning.py  test_model_router.py  test_new_prompt_format.py  test_orchestrator.py  test_parameter_fixing.py  test_planner_fixes.py  test_planner_integration.py
v0/: .gitignore  README.md  config.example.yaml  example_config.json  pyproject.toml  requirements.txt  run.py
v0/docs/: PARAMETER_MAPPING_FIX.md
v0/src/coding_agent/: __init__.py  config.py  prompt_manager.py  relevance_filter.py  self_improvement.py  ui.py
v0/src/coding_agent.egg-info/: PKG-INFO  requires.txt
v0/src/coding_agent/indexer/: file_indexer.py
v0/src/coding_agent/providers/: ollama.py
v0/src/coding_agent/tools/: analysis_tools.py  anti_pattern_parser.py  brainstorm_tool.py  code_quality_metrics_tool.py  code_review_assistant.py  context_aware_code_generator.py  directive_tools.py  documentation_sync_tool.py  file_tools.py  git_tools.py  intelligent_debugging_tool.py  pattern_recognition_tool.py  project_scaffolding_tool.py  prompt_enhancement_tool.py  refactoring_tools.py  technical_debt_tracker.py  test_generator_tool.py  test_tools.py  web_viewer_tool.py
v0/src/core/: collaboration.py  config.py  interpreted_orchestrator.py  learning.py  model_router.py  orchestrator.py  planner.py  prompt_utils.py  response_cleaner.py  safety.py
v0/src/core/providers/: __init__.py  base.py
v0/src/core/tools/: file_tool.py  refactor_tool.py  search_tool.py  summary_tool.py
(+8 files in other folders)
